kustomize/overlays/prod/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: task-tracker-prod
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /prod/grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
